--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
     <title>Kailey Waal</title>
 </head>
 <body>
-    
+    <header>
+        <div class="nav-bar">
+            <span class="logo"><a href="index.html">KW</a></span>
+            <ul class="nav-items">
+                <li class="nav-item"><a href="index.html">about</a></li>
+                <li class="nav-item"><a href="work.html">projects</a></li>
+                <li class="nav-item"><a href="contact.html">contact</a></li>
+            </ul>
+        </div>
+        <div class="hamburger-icon" onclick="toggleMenu(this)">
+          <div class="bar bar1"></div>
+          <div class="bar bar2"></div>
+          <div class="bar bar3"></div>
+        </div>
+    </header>
     <main>
         <section>
             <h1>Hey, I'm Kailey!</h1>
@@ -25,25 +39,45 @@
         </section>
         <section>
             <h2>Featured Projects</h2>
-            <article>
-                <h3>Project Name</h3>
-                <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
-                <div>
-                    <a href="">More details</a>
-                    <a href="">View Code</a>
-                    <a href="">View Live</a>
-                </div>
-            </article>
+            <div class="projects">
+                <article class="project">
+                    <h3>Project Name</h3>
+                    <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
+                    <div>
+                        <a href="">details</a>
+                        <a href="">view code</a>
+                        <a href="">view live</a>
+                    </div>
+                </article>
+                <article class="project">
+                    <h3>Project Name</h3>
+                    <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
+                    <div>
+                        <a href="">details</a>
+                        <a href="">view code</a>
+                        <a href="">view live</a>
+                    </div>
+                </article>
+                <article class="project">
+                    <h3>Project Name</h3>
+                    <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
+                    <div>
+                        <a href="">details</a>
+                        <a href="">view code</a>
+                        <a href="">view live</a>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
     <footer>
-        <p>Get in touch!</p>
+        <h2 class="get-in-touch">Get in touch!</h2>
         <p>LinkedIn: <a href="">kaileywaal</a></p>
         <p>GitHub: <a href="">kaileywaal</a></p>
         <p>Email: <a href="">kaileynwaal@gmail.com</a></p>
     </footer>
     
 
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
