added light and dark mode toggle

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light-mode">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,9 +20,154 @@
                 <li class="nav-item"><a href="work.html">projects</a></li>
                 <li class="nav-item"><a href="contact.html">contact</a></li>
             </ul>
+            <div class="container">
+                <label class="switch" for="checkbox" title="Change color scheme to dark mode">
+                  <input type="checkbox" id="checkbox" onclick="toggleTheme()"/>
+                  <div class="slider round"></div>
+                  <div class="toggle-sun"><?xml version="1.0" encoding="iso-8859-1"?>
+                    <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M256,128c-70.579,0-128,57.421-128,128s57.421,128,128,128s128-57.421,128-128S326.579,128,256,128z M256,358.4
+                            c-56.559,0-102.4-45.841-102.4-102.4c0-56.559,45.841-102.4,102.4-102.4c56.559,0,102.4,45.841,102.4,102.4
+                            C358.4,312.559,312.559,358.4,256,358.4z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path d="M256,0c-7.074,0-12.8,5.726-12.8,12.8v76.8c0,7.074,5.726,12.8,12.8,12.8c7.074,0,12.8-5.726,12.8-12.8V12.8
+                                C268.8,5.726,263.074,0,256,0z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path d="M256,409.6c-7.074,0-12.8,5.726-12.8,12.8v76.8c0,7.074,5.726,12.8,12.8,12.8c7.074,0,12.8-5.726,12.8-12.8v-76.8
+                                C268.8,415.326,263.074,409.6,256,409.6z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path d="M499.2,243.2h-76.8c-7.074,0-12.8,5.726-12.8,12.8c0,7.074,5.726,12.8,12.8,12.8h76.8c7.074,0,12.8-5.726,12.8-12.8
+                                C512,248.926,506.274,243.2,499.2,243.2z"/>
+                            </g>
+                        </g>
+                    <g>
+                        <g>
+                            <path d="M89.6,243.2H12.8C5.726,243.2,0,248.926,0,256c0,7.074,5.726,12.8,12.8,12.8h76.8c7.074,0,12.8-5.726,12.8-12.8
+                            C102.4,248.926,96.674,243.2,89.6,243.2z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path d="M437.018,74.982c-5-5.001-13.099-5.001-18.099,0l-54.306,54.306c-5.001,5.001-5.001,13.099,0,18.099
+                                c5,5,13.099,5,18.099,0l54.306-54.306C442.018,88.081,442.018,79.983,437.018,74.982z"/>
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                            <path d="M147.388,364.612c-5.001-5.001-13.099-5.001-18.099,0l-54.306,54.306c-5.001,5.001-5.001,13.099,0,18.099
+                                c5.001,5.001,13.099,5.001,18.099,0l54.306-54.306C152.388,377.711,152.388,369.613,147.388,364.612z"/>
+                            </g>
+                        </g>
+                    <g>
+                        <g>
+                            <path d="M437.018,418.918l-54.306-54.306c-5.001-5.001-13.099-5.001-18.099,0c-5.001,5-5.001,13.099,0,18.099l54.306,54.306
+                            c5.001,5.001,13.099,5.001,18.099,0C442.018,432.017,442.018,423.919,437.018,418.918z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path d="M147.388,129.289L93.082,74.982c-5.001-5.001-13.099-5.001-18.099,0c-5.001,5-5.001,13.099,0,18.099l54.306,54.306
+                            c5.001,5,13.099,5,18.099,0C152.388,142.387,152.388,134.289,147.388,129.289z"/>
+                        </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                </svg>
+                    </div>
+                    <div class="toggle-moon"><?xml version="1.0" encoding="iso-8859-1"?>
+                        <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            viewBox="0 0 63 63" style="enable-background:new 0 0 63 63;" xml:space="preserve">
+                        <g>
+                            <g id="group-6svg">
+                                <path id="path-1_26_" d="M32.524,63c-8.687,0-16.855-3.383-22.998-9.526S0,39.164,0,30.476c0-8.687,3.382-16.855,9.526-22.998
+                                    c3.248-3.248,7.095-5.732,11.432-7.38c0.554-0.209,1.176-0.076,1.593,0.341c0.418,0.418,0.552,1.042,0.342,1.594
+                                    c-4.128,10.864-1.499,23.18,6.697,31.376c5.565,5.564,12.967,8.629,20.842,8.629c3.619,0,7.163-0.65,10.534-1.931
+                                    c0.556-0.209,1.177-0.076,1.594,0.342c0.418,0.417,0.552,1.041,0.342,1.593c-1.648,4.338-4.132,8.184-7.381,11.432
+                                    C49.379,59.617,41.211,63,32.524,63z M19.044,4.222c-2.738,1.396-5.216,3.197-7.397,5.378C6.071,15.176,3,22.59,3,30.476
+                                    c0,7.887,3.071,15.3,8.647,20.877C17.223,56.929,24.637,60,32.524,60c7.886,0,15.3-3.071,20.876-8.647
+                                    c2.181-2.18,3.981-4.658,5.377-7.395c-2.715,0.718-5.509,1.08-8.345,1.08c-8.677,0-16.832-3.377-22.963-9.507
+                                    C19.249,27.311,16.111,15.331,19.044,4.222z"/>
+                            </g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        </svg>
+                        </div>
+                </label>
+            </div>
         </div>
         <div class="hamburger-icon" onclick="toggleMenu(this)">
-          <div class="bar bar1"></div>
+            <div class="bar bar1"></div>
           <div class="bar bar2"></div>
           <div class="bar bar3"></div>
         </div>
@@ -32,14 +177,22 @@
             <h1>Hey, I'm Kailey!</h1>
             <h2>Full-stack-capable, back-end-obsessed software developer.</h2>
             <p>I was the kid who won art competitions but also loved algebra. 
-                I thought that to have a career, I had to decide between these two parts of myself — the creative and the analytical. 
-                Then I discovered coding and quickly became obsessed. 
-                My creative side could come up with all kinds of ways to solve challenging problems and then my nerd side could come out to move forward with the best option. 
+               So when I discovered coding I quickly became obsessed—
+                my creative side gets to come up tons of ways to solve challenging problems and then my nerd side comes out to move forward with the best option. 
                 Nothing captures my attention (or makes me forget to eat) more.</p>
         </section>
         <section>
             <h2>Featured Projects</h2>
             <div class="projects">
+                <article class="project">
+                    <h3>Project Name</h3>
+                    <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
+                    <div>
+                        <a href="">details</a>
+                        <a href="">view code</a>
+                        <a href="">view live</a>
+                    </div>
+                </article>
                 <article class="project">
                     <h3>Project Name</h3>
                     <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
