Added project details

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" id="css-stylesheet">
     
     <title>Kailey Waal</title>
 </head>
@@ -17,7 +17,7 @@
             <span class="logo"><a href="index.html">KW</a></span>
             <ul class="nav-items">
                 <li class="nav-item"><a href="index.html">about</a></li>
-                <li class="nav-item"><a href="work.html">projects</a></li>
+                <li class="nav-item"><a href="projects.html">projects</a></li>
                 <li class="nav-item"><a href="contact.html">contact</a></li>
             </ul>
             <div class="container">
@@ -185,39 +185,36 @@
             <h2>Featured Projects</h2>
             <div class="projects">
                 <article class="project">
-                    <h3>Project Name</h3>
-                    <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
+                    <h3>TEnmo Money Transfer App</h3>
+                    <p>A Venmo-clone application that allows users to send, request, and approve money transfers.</p>
                     <div>
-                        <a href="">details</a>
-                        <a href="">view code</a>
-                        <a href="">view live</a>
+                        <a href="projects.html#tenmo">details</a>
+                        <a href="https://github.com/kaileywaal/TEnmo" target="_blank">view code</a>
                     </div>
                 </article>
                 <article class="project">
-                    <h3>Project Name</h3>
-                    <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
+                    <h3>Euchre Card Game</h3>
+                    <p>A CLI application that allows 1-4 players to play a full game of Euchre against  the computer.</p>
                     <div>
-                        <a href="">details</a>
-                        <a href="">view code</a>
-                        <a href="">view live</a>
+                        <a href="projects.html#euchre">details</a>
+                        <a href="https://github.com/kaileywaal/Euchre" target="_blank">view code</a>
                     </div>
                 </article>
                 <article class="project">
-                    <h3>Project Name</h3>
-                    <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
+                    <h3>Virtual Vending Machine</h3>
+                    <p>A vending machine CLI application that allows users to feed money, select products, and finish their transactions to receive change.</p>
                     <div>
-                        <a href="">details</a>
-                        <a href="">view code</a>
-                        <a href="">view live</a>
+                        <a href="projects.html#vending-machine">details</a>
+                        <a href="https://github.com/kaileywaal/VendingMachine" target="_blank">view code</a>
                     </div>
                 </article>
                 <article class="project">
-                    <h3>Project Name</h3>
-                    <p>Project description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus cumque aliquam maiores ab explicabo accusantium sit molestiae repellat doloremque!</p>
+                    <h3>IP Address Tracker</h3>
+                    <p>An app that allows you to search for an IP address or domain and see its location on a map. </p>
                     <div>
-                        <a href="">details</a>
-                        <a href="">view code</a>
-                        <a href="">view live</a>
+                        <a href="projects.html#ip-address-tracker">details</a>
+                        <a href="https://github.com/kaileywaal/ip-address-tracker-hub" target="_blank">view code</a>
+                        <a href="https://kaileywaal.github.io/ip-address-tracker-hub/" target="_blank">view live</a>
                     </div>
                 </article>
             </div>
@@ -225,9 +222,9 @@
     </main>
     <footer>
         <h2 class="get-in-touch">Get in touch!</h2>
-        <p>LinkedIn: <a href="">kaileywaal</a></p>
-        <p>GitHub: <a href="">kaileywaal</a></p>
-        <p>Email: <a href="">kaileynwaal@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/kailey-waal/" target="_blank">kaileywaal</a></p>
+        <p>GitHub: <a href="https://github.com/kaileywaal" target="_blank">kaileywaal</a></p>
+        <p>Email: <a href="mailto:kaileynwaal@gmail.com">kaileynwaal@gmail.com</a></p>
     </footer>
     
 
