--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <h2>Full-stack-capable, back-end-obsessed software developer.</h2>
             <p>I was the kid who won art competitions but also loved algebra. 
                So when I discovered coding I quickly became obsessed—
-                my creative side gets to come up tons of ways to solve challenging problems and then my nerd side comes out to move forward with the best option. 
+                my creative side gets to come up with tons of ways to solve challenging problems and then my nerd side comes out to move forward with the best option. 
                 Nothing captures my attention (or makes me forget to eat) more.</p>
         </section>
         <section>
