--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <main>
         <section>
             <h1>Hey, I'm Kailey!</h1>
-            <h2>Full-stack-capable, back-end-obsessed software developer.</h2>
+            <h2>Full stack software developer.</h2>
             <p>I was the kid who won art competitions but also loved algebra. 
                So when I discovered coding I quickly became obsessed—
                 my creative side gets to come up with tons of ways to solve challenging problems and then my nerd side comes out to move forward with the best option. 
