updated meta data

--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" class="light-mode">
+<html lang="en" class="light-mode" prefix=”og: http://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
+    <meta 
+      property=”og:title”
+      content=”Kailey Waal Portfolio” 
+    />
+    <meta 
+      name=”image” 
+      property=”og:image” 
+      content=”%PUBLIC_URL%/assets/preview.png” 
+    />
+    <meta 
+      name=”author” 
+      content=”Kailey Waal” 
+    />
+    <meta 
+      property=”og:description” 
+      content=”A peek at the projects I've been working on -- take a look around!“
+    />
+    <meta 
+      property=”og:url” 
+      content=”https://kaileywaal.com" 
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
