--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta 
+      name="title"
       property=”og:title”
       content=”Kailey Waal Portfolio” 
     />
     <meta 
       name=”image” 
       property=”og:image” 
-      content=”%PUBLIC_URL%/assets/preview.png” 
+      content=”/assets/preview.png” 
     />
     <meta 
       name=”author” 
       content=”Kailey Waal” 
     />
     <meta 
+      name="description"
       property=”og:description” 
       content=”A peek at the projects I've been working on -- take a look around!“
     />
