--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <main>
       <section>
         <h1>Hey, I'm Kailey!</h1>
-        <h2>Full stack software developer.</h2>
+        <h2>Front end software developer.</h2>
         <p>
           I was the kid who won art competitions but also loved algebra. So when
           I discovered coding I quickly became obsessed— my creative side gets
