updated resume link

--- a/contact.html
+++ b/contact.html
@@ -229,8 +229,7 @@
         <br />
         <div>
           <p>
-            <a
-              href="https://docs.google.com/document/d/1nA6Km5FTnCTGU6Fjd7HD5e7TmwT-OuSY/edit?usp=sharing&ouid=109819671900797654330&rtpof=true&sd=true"
+            <a href="assets/Kailey_Waal_Resume.pdf" target="_blank"
               >View Resume</a
             >
           </p>
