--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
                 >view code</a
               >
               <a
-                href="https://nlr3-stock-market-game.netlify.app/"
+                href="https://drive.google.com/file/d/1vrwgRWeV6iMRiGs8Cm8LpgpCe2_BmE2Z/view"
                 target="_blank"
-                >view live</a
+                >view demo</a
               >
             </div>
           </article>
@@ -292,7 +292,7 @@
                 >view code</a
               >
               <a href="https://ffec.github.io/ffec-site/" target="_blank"
-                >view live</a
+                >view site</a
               >
             </div>
           </article>
@@ -312,7 +312,7 @@
               <a
                 href="https://kaileywaal.github.io/ip-address-tracker-hub/"
                 target="_blank"
-                >view live</a
+                >view site</a
               >
             </div>
           </article>
