--- a/projects.html
+++ b/projects.html
@@ -308,10 +308,6 @@
             <em>Finnhub API</em> for real-time stock data and
             <em>ECharts library</em> to display graphical data.
           </p>
-          <p class="italic">
-            To view a demo of the game use the following credentials:
-            <br />username: admin <br />password: password
-          </p>
           <div class="links">
             <a
               href="https://github.com/kaileywaal/virtual-stock-market"
@@ -319,9 +315,9 @@
               >view code</a
             >
             <a
-              href="https://nlr3-stock-market-game.netlify.app/"
+              href="https://drive.google.com/file/d/1vrwgRWeV6iMRiGs8Cm8LpgpCe2_BmE2Z/view"
               target="_blank"
-              >view live</a
+              >view demo</a
             >
           </div>
         </article>
@@ -352,7 +348,7 @@
               >view code</a
             >
             <a href="https://ffec.github.io/ffec-site/" target="_blank"
-              >view live</a
+              >view site</a
             >
           </div>
         </article>
@@ -599,7 +595,7 @@
             <a
               href="https://kaileywaal.github.io/ip-address-tracker-hub/"
               target="_blank"
-              >view live</a
+              >view site</a
             >
           </div>
         </article>
